--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-head": "^3.4.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.9.4",
