--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.2",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
   },
